# torchwrench

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: test.yaml
docs/: conf.py  index.rst  modules.rst  torchwrench.core.config.rst  torchwrench.core.dtype.rst  torchwrench.core.dtype_enum.rst  torchwrench.core.make.rst  torchwrench.core.packaging.rst  torchwrench.core.rst  torchwrench.core.version.rst  torchwrench.entries.rst  torchwrench.extras.colorlog.rst  torchwrench.extras.hdf.common.rst  torchwrench.extras.hdf.dataset.rst  torchwrench.extras.hdf.pack.rst  torchwrench.extras.hdf.rst  torchwrench.extras.numpy.definitions.rst  torchwrench.extras.numpy.functional.rst  torchwrench.extras.numpy.rst  torchwrench.extras.numpy.saving.rst  torchwrench.extras.numpy.scan_info.rst  torchwrench.extras.pandas.definitions.rst  torchwrench.extras.pandas.rst  torchwrench.extras.rst  torchwrench.extras.safetensors.rst  torchwrench.extras.speechbrain.definitions.rst  torchwrench.extras.speechbrain.rst  torchwrench.extras.tensorboard.rst  torchwrench.extras.torchaudio.rst  torchwrench.extras.yaml.definitions.rst  torchwrench.extras.yaml.rst  torchwrench.extras.yaml.yaml.rst  torchwrench.hub.download.rst  torchwrench.hub.paths.rst  torchwrench.hub.registry.rst  torchwrench.hub.rst  torchwrench.nn.functional.activation.rst  torchwrench.nn.functional.checksum.rst  torchwrench.nn.functional.cropping.rst  torchwrench.nn.functional.indices.rst  (+64 more)
src/torchoutil/: __init__.py
src/torchwrench/: __init__.py  __init__.pyi  entries.py  entries.pyi
tests/: test_compat.py  test_core_packaging.py  test_extras_hdf.py  test_extras_numpy_functional.py  test_extras_numpy_scan_info.py  test_extras_yaml.py  test_hub.py  test_nn_functional_multilabel.py  test_nn_functional_others.py  test_nn_functional_predicate.py  test_nn_functional_transform.py  test_nn_modules.py  test_nn_modules_mixins.py  test_nn_modules_tensor.py  test_readme.py  test_serialization.py  test_types_guards.py  test_types_tensor_subclasses.py  test_utils_data_dataset.py  test_utils_data_sampler.py  test_utils_data_slicer.py  test_utils_data_split.py  test_utils_data_tabular.py  test_utils_data_wrapper.py
tests/test_nn/: test_nn_functional_mask.py  (+9 more)
tmp/: typed_tensor.ipynb
(+206 files in other folders)
