[project]
name = "torchwrench"
authors = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
description = "Collection of functions and modules to help development in PyTorch."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pytorch", "deep-learning"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
maintainers = [
    {name = "Étienne Labbé (Labbeti)", email = "labbeti.pub@gmail.com"},
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://pypi.org/project/torchwrench/"
Documentation = "https://torchwrench.readthedocs.io/"
Repository = "https://github.com/Labbeti/torchwrench.git"
Changelog = "https://github.com/Labbeti/torchwrench/blob/main/CHANGELOG.md"
Tracker = "https://github.com/Labbeti/torchwrench/issues"

[project.scripts]
torchwrench-info = "torchwrench.entries:print_install_info"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
# package names should match these glob patterns (["*"] by default)
# note: star after package names is required to work
include = ["torchwrench*"]

[tool.setuptools.dynamic]
version = {attr = "torchwrench.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {extras = { file = ["requirements-extras.txt"] }, dev = { file = ["requirements-dev.txt", "docs/requirements.txt"] }}

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
